@@ -686,6 +686,13 @@ class API(APIBase):
             detail = 'expected type {0}, not {1}'
             detail = detail.format(self.collection_name, type_)
             return error_response(409, detail=detail)
+        # Check that the ID is a string, as required by the "Resource
+        # Object: Identification" section of the JSON API specification.
+        if not isinstance(id_, str):
+            detail = ('The "id" element of the resource object must be a JSON'
+                      ' string: {0}')
+            detail = detail.format(id_)
+            return error_response(409, detail=detail)
         if id_ != resource_id:
             message = 'ID must be {0}, not {1}'.format(resource_id, id_)
             return error_response(409, detail=message)
